<resources>
    <string name="app_name">Weather.io</string>
    <string name="wind_header">Wind</string>
    <string name="today">Today</string>
    <string name="index_uv_header">Index UV</string>
    <string name="feels_like_header">Feels like</string>
    <string name="humidity_header">Humidity</string>
    <string name="next_7_days">Next 7 Days</string>
    <string name="temperature">%d°</string>
    <string name="temperature_header">Temperature</string>
    <string name="humidity">%s%%</string>
    <string name="wind_metric">%s m/s</string>
    <string name="wind_imperial">%s m/h</string>
    <string name="cities">Manage cities</string>
    <string name="tip_message">Use search if the city you are looking for is not on the list</string>
    <string name="search">Search</string>
    <string name="found_city_format">%s, %s, %s</string>
    <string name="no_results_found">No results found</string>
    <string name="web_client_id">138818576515-647ojkmpbo4pd9mbsbdl3r5i593kgobt.apps.googleusercontent.com</string>
    <string name="successful_authentication">Signed in successfully!</string>
    <string name="user_profile">User profile</string>
    <string name="greeting">Discover the Weather\nin Your City</string>
    <string name="greeting_description">Get to know your hourly and\ndaily weather forecast</string>
    <string name="units_of_measurement">Units of measurement</string>
    <string name="source_header">Source</string>
    <string name="source">openweathermap.com</string>
    <string name="sign_out">Sign out</string>
    <string name="fab_open_map_description">Open map selection</string>
    <string name="logout">Log out</string>
    <string name="continue_with_twitter">Continue with Twitter</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="weather_report">Today: %d↑ %d↓ %s. Wind speed: %f m/s Pressure: %d hPa Precipitation prob. %d%%</string>
    <string name="notification_title">Daily Weather Report</string>
    <string name="notification_text">Today:  %d°↑ %d°↓ %s.\n\nTap to discover hourly forecast, precipitation probability and much more!</string>
    <string name="use_without_an_account">Use without an account</string>
    <string name="sign_in">Sign in</string>
    <string name="average_header">Average</string>
    <string name="date_range">%s - %s</string>
    <string name="user_guide">User guide</string>
    <string name="historical_weather">Historical weather</string>
</resources>