<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivAppLogo"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="160dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_isolated_thunderstorms_day" />

    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:text="@string/greeting"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivAppLogo" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/greeting_description"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvHeader" />

    <Button
        android:id="@+id/btnSignInGoogle"
        style="@style/ButtonRoundCorners"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="66dp"
        android:text="@string/continue_with_google"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/tvHeader"
        app:layout_constraintStart_toStartOf="@id/tvHeader"
        app:layout_constraintTop_toBottomOf="@id/tvDescription" />

    <Button
        android:id="@+id/btnSignInTwitter"
        style="@style/ButtonRoundCorners"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/continue_with_twitter"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/tvHeader"
        app:layout_constraintStart_toStartOf="@id/btnSignInGoogle"
        app:layout_constraintTop_toBottomOf="@id/btnSignInGoogle" />
</androidx.constraintlayout.widget.ConstraintLayout>