<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="John" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivUserProfilePicture"
        style="@style/ImageViewRound"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvUserName"
        app:shapeAppearanceOverlay="@style/ImageViewRound"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvUserEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivUserProfilePicture"
        tools:text="test@gmail.com" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="340dp" />



    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardMeasurementUnit"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:cardElevation="0dp"
        app:strokeWidth="0dp"
        app:layout_constraintTop_toBottomOf="@id/guideline">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvMeasurementUnitsHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/main_horizontal_indent"
                android:text="@string/units_of_measurement"
                android:textColor="@color/black"
                android:textColorHighlight="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <TextView
                android:id="@+id/tvMeasurementUnit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/main_horizontal_indent"
                android:drawablePadding="16dp"
                android:textColorHighlight="@color/gray"
                android:textSize="16sp"
                app:drawableEndCompat="@drawable/ic_arrow_right"
                app:layout_constraintBaseline_toBaselineOf="@id/tvMeasurementUnitsHeader"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="Metric" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardWeatherSource"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:cardElevation="0dp"
        app:strokeWidth="0dp"
        app:layout_constraintTop_toBottomOf="@id/cardMeasurementUnit">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvSourceHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/main_horizontal_indent"
                android:textColor="@color/black"
                android:textColorHighlight="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/source_header" />

            <TextView
                android:id="@+id/tvSource"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/main_horizontal_indent"
                android:drawablePadding="16dp"
                android:textColorHighlight="@color/gray"
                android:textSize="14sp"
                app:drawableEndCompat="@drawable/ic_arrow_right"
                app:layout_constraintBaseline_toBaselineOf="@id/tvSourceHeader"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/source" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>