<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvCityName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/main_horizontal_indent"
        android:layout_marginTop="18dp"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="City name" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardWeatherInfoMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/main_horizontal_indent"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="@dimen/card_main_info_corner_radius"
        app:cardElevation="22dp"
        app:layout_constraintTop_toBottomOf="@id/tvCityName"
        app:strokeWidth="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ivWeatherIcon"
                android:layout_width="@dimen/icon_normal_size"
                android:layout_height="@dimen/icon_normal_size"
                android:layout_marginTop="30dp"
                app:srcCompat="@drawable/ic_cloudy_1_day"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvWeatherName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/black"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivWeatherIcon"
                tools:text="Clouds" />

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:textColor="@color/gray"
                app:layout_constraintEnd_toEndOf="@id/tvWeatherName"
                app:layout_constraintStart_toStartOf="@id/tvWeatherName"
                app:layout_constraintTop_toBottomOf="@id/tvWeatherName"
                tools:text="Wednesday, 31 May" />

            <TextView
                android:id="@+id/tvTemperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="28dp"
                android:textColor="@color/black"
                android:textSize="50sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/tvDate"
                app:layout_constraintStart_toStartOf="@id/tvDate"
                app:layout_constraintTop_toBottomOf="@id/tvDate"
                tools:text="24°" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardWeatherAdditionalInfo"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginHorizontal="@dimen/main_horizontal_indent"
        android:layout_marginTop="28dp"
        app:cardBackgroundColor="@color/blue"
        app:cardCornerRadius="@dimen/card_main_info_corner_radius"
        app:cardElevation="20dp"
        app:layout_constraintTop_toBottomOf="@id/cardWeatherInfoMain">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/icWind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@id/dividerHorizontal"
                app:layout_constraintEnd_toEndOf="@id/icSun"
                app:layout_constraintStart_toStartOf="@id/icSun"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_wind_white" />

            <TextView
                android:id="@+id/tvWindHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/card_addition_info_title_horizontal_indent"
                android:layout_marginTop="10dp"
                android:text="@string/wind_header"
                android:textAllCaps="true"
                android:textColor="@color/light_gray_lighten"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@id/icWind"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvWind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@id/dividerHorizontal"
                app:layout_constraintStart_toStartOf="@id/tvWindHeader"
                tools:text="19.2 m/s" />

            <ImageView
                android:id="@+id/icSun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/card_addition_info_icon_horizontal_indent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dividerHorizontal"
                app:srcCompat="@drawable/ic_sun_white" />

            <TextView
                android:id="@+id/tvIndexUvHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/card_addition_info_title_horizontal_indent"
                android:layout_marginTop="10dp"
                android:text="@string/index_uv_header"
                android:textAllCaps="true"
                android:textColor="@color/light_gray_lighten"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@id/icSun"
                app:layout_constraintTop_toTopOf="@id/dividerHorizontal" />

            <TextView
                android:id="@+id/tvIndexUv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/tvWindHeader"
                tools:text="2" />

            <ImageView
                android:id="@+id/icThermometer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@id/dividerHorizontal"
                app:layout_constraintEnd_toEndOf="@id/icHumidity"
                app:layout_constraintStart_toStartOf="@id/icHumidity"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_thermometer_white_cropped" />

            <TextView
                android:id="@+id/tvFeelsLikeHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/card_addition_info_title_horizontal_indent"
                android:layout_marginTop="10dp"
                android:text="@string/feels_like_header"
                android:textAllCaps="true"
                android:textColor="@color/light_gray_lighten"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@id/icThermometer"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvFeelsLike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@id/dividerHorizontal"
                app:layout_constraintStart_toStartOf="@id/tvFeelsLikeHeader"
                tools:text="25°" />

            <ImageView
                android:id="@+id/icHumidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/card_addition_info_icon_horizontal_indent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/dividerVertical"
                app:layout_constraintTop_toTopOf="@id/dividerHorizontal"
                app:srcCompat="@drawable/ic_humidity_white" />

            <TextView
                android:id="@+id/tvHumidityHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/card_addition_info_title_horizontal_indent"
                android:layout_marginTop="10dp"
                android:text="@string/humidity_header"
                android:textAllCaps="true"
                android:textColor="@color/light_gray_lighten"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@id/icHumidity"
                app:layout_constraintTop_toTopOf="@id/dividerHorizontal" />

            <TextView
                android:id="@+id/tvHumidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/tvHumidityHeader"
                tools:text="40%" />

            <View
                android:id="@+id/dividerVertical"
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <View
                android:id="@+id/dividerHorizontal"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tvToday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/main_horizontal_indent"
        android:layout_marginBottom="16dp"
        android:text="@string/today"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/rvWeatherHourly"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvNext7Days"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/next_7_days"
        android:textColor="@color/gray"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@id/tvToday"
        app:layout_constraintEnd_toStartOf="@id/icArrow" />

    <ImageView
        android:id="@+id/icArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/main_horizontal_indent"
        app:layout_constraintBottom_toBottomOf="@id/tvNext7Days"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvNext7Days"
        app:srcCompat="@drawable/ic_arrow_right" />

    <com.airbnb.epoxy.EpoxyRecyclerView
        android:id="@+id/rvWeatherHourly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/main_horizontal_indent"
        android:paddingTop="8dp"
        android:paddingBottom="16dp"
        app:itemSpacing="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:listitem="@layout/item_hourly_weather" />

    <FrameLayout
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <include
            layout="@layout/loading_indicator"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>